--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-localstorage": "^0.4.1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
