--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@babel/register": "^7.9.0",
     "antd": "^4.3.3",
+    "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "excel4node": "^1.7.2",
     "history": "^4.10.1",
+    "moment-jalaali": "^0.9.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
