--- a/package.json
+++ b/package.json
@@ -13,21 +13,17 @@
     "@babel/register": "^7.9.0",
     "antd": "^4.3.3",
     "axios": "^0.19.2",
-    "connected-react-router": "^6.8.0",
     "excel4node": "^1.7.2",
-    "history": "^4.10.1",
     "moment-jalaali": "^0.9.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-localstorage": "^0.4.1",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.2.0"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
