--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/register": "^7.9.0",
     "antd": "^4.3.3",
     "axios": "^0.19.2",
+    "electron-store": "^5.2.0",
     "excel4node": "^1.7.2",
     "moment-jalaali": "^0.9.2",
     "prop-types": "^15.7.2",
@@ -22,7 +23,6 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-localstorage": "^0.4.1",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
