--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "virgooldoon",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "virgooldoon",
   "main": "init.js",
   "author": {
-    "name": "Jordan Schroter",
-    "email": "email@author.com"
+    "name": "Ali Ghanavatian",
+    "email": "ghanavatian.ali@gmail.com"
   },
   "repository": "https://github.com/thg303/virgooldoon",
   "license": "MIT",
@@ -13,9 +13,12 @@
     "@babel/register": "^7.9.0",
     "antd": "^4.3.3",
     "axios": "^0.19.2",
+    "electron-dl": "^3.0.1",
     "electron-store": "^5.2.0",
     "excel4node": "^1.7.2",
+    "fs-extra": "^9.0.1",
     "moment-jalaali": "^0.9.2",
+    "node-html-parser": "^1.2.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
