--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.3.3",
     "axios": "^0.19.2",
     "electron-dl": "^3.0.1",
+    "electron-log": "^4.2.2",
     "electron-store": "^5.2.0",
     "excel4node": "^1.7.2",
     "fs-extra": "^9.0.1",
